2007-10-02  Akim Demaille  <demaille@gostai.com>

	ast::Flavorable.
	* src/ast/ast.yml (Flavorable): New.
	(While): Derive from it.
	* src/parser/bison/ugrammar.y: Adjust to build "while|" too.
	* src/runner/runner.cc: Adjust.

2007-10-02  Akim Demaille  <demaille@gostai.com>

	ast::flavor_type.
	Replaces former Flavorable and execution_kind.
	* src/ast/flavor.hh, src/ast/flavor.cc: New.
	* dev/ast_params.py: Use it.
	* src/ast/ast.yml (Nary): Use it.
	(Nary::execution_kind): Remove.
	* src/ast/Makefile.am: Compile it.
	* src/parser/bison/ugrammar.y: Adjust.
	* src/parser/bison/utoken.l: Adjust.
	* src/runner/runner.cc: Adjust.

2007-10-02  Akim Demaille  <demaille@gostai.com>

	Slot redefinition.
	* src/object/urbi-exception.hh, src/object/urbi-exception.cc,
	* src/object/urbi-exception.hxx:
	Move the error messages to where they are used instead of using
	variables.
	(redefinition): New.
	(lookupFailed): Take a symbol, since that's what it's about.
	Adjust uses.
	* src/object/object.hxx (slot_set): Move to...
	* src/object/object.cc (slot_set): here.
	Catch redefinition.

2007-10-02  Akim Demaille  <demaille@gostai.com>

	Assignment depends on the container.
	"=" must update the value, not set it.
	Unless the object is a local variable container.
	* src/object/object.hh, src/object/object.cc, src/object/object.hxx
	(locals_, locals_set, locals_get): New.
	(lookup_set_type): Rename as...
	(objects_type): this.
	(which): New.
	(lookup, slot_set, update_slot): Use it.
	(operator[]): Remove: its semantics is unclear since now the
	lookup depends whether we want to read or to write.
	(own_slot_get): New.	
	* src/runner/runner.cc, src/runner/runner.hxx: Adjust to
	declare locals objects as such.

	* src/parser/bison/ugrammar.y: Documentation changes.

2007-10-02  Akim Demaille  <demaille@gostai.com>

	Complete UCONSOLE_MODE.
	* src/parser/bison/utoken.l: Also catch [:] continuation lines.

2007-09-27  Thomas Moulard  <thomas@moulard.net>
